# eos_plugin_for_unity

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  app.config  index.html  manifest.json  packages.config  readme.md  toc.html  xrefmap.yml
.github/: README.md
Assets/: Readme.asset  link.xml  packages.config  user.keystore
EOSUnityPlugin_package_template/: .gitattributes  CHANGELOG-prerelease.md  CHANGELOG.md  LICENSE.md  package.json
EOSZipInstallDescriptionConfigs/: eos_public_platforms_description.json
PackageDescriptionConfigs/: eos_export_assets_package_desc.json  eos_package_description.json
PlatformSpecificAssets/: .gitattributes
ProjectSettings/: .gitignore  EditorBuildSettings.asset  EditorSettings.asset  InputManager.asset  PresetManager.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
UnityHelpers_Android/UnityHelpers_Android/src/main/cpp/: CMakeLists.txt  JNIHelpers.cpp
api/: PlayEveryWare.EpicOnlineServices.EOSConfigFile-1.html  PlayEveryWare.EpicOnlineServices.EOSPluginEditorAndroidBuildConfig.html  PlayEveryWare.EpicOnlineServices.EOSPluginEditorAndroidBuildConfigSection.html  PlayEveryWare.EpicOnlineServices.EOSPluginEditorConfigEditor.html  PlayEveryWare.EpicOnlineServices.EOSPluginEditorPrebuildConfig.html  PlayEveryWare.EpicOnlineServices.EOSPluginEditorPrebuildConfigSection.html  PlayEveryWare.EpicOnlineServices.EOSPluginEditorToolsConfig.html  PlayEveryWare.EpicOnlineServices.EOSPluginEditorToolsConfigSection.html  PlayEveryWare.EpicOnlineServices.EOSVersionInformation.html  PlayEveryWare.EpicOnlineServices.EpicOnlineServicesConfigEditor.html  PlayEveryWare.EpicOnlineServices.IEOSPluginEditorConfigurationSection.html  PlayEveryWare.EpicOnlineServices.IPlatformSpecificConfigEditor.html  PlayEveryWare.EpicOnlineServices.Samples.ChatEntry.html  PlayEveryWare.EpicOnlineServices.Samples.ChatWithFriendData.html  PlayEveryWare.EpicOnlineServices.Samples.CustomInviteData.html  PlayEveryWare.EpicOnlineServices.Samples.EOSAchievementManager.html  PlayEveryWare.EpicOnlineServices.Samples.EOSAntiCheatClientManager.html  (+45 more)
(+1473 files in other folders)
